adding insights sidecar

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ REDIS_PASSWORD=your_secure_password
 # Container configuration
 REDIS_PORT=6379
 REDIS_INSIGHT_PORT=8001
+
+# Monitoring configuration (for App Insights sidecar)
+APP_INSIGHTS_CONNECTION_STRING=
+SAMPLING_PERCENTAGE=100
+LOG_LEVEL=info
