--- a/redis.conf
+++ b/redis.conf
@@ -34,4 +34,4 @@ maxmemory-policy noeviction  # Don't evict keys when memory is full
 
 # Logging
 loglevel notice
-logfile ""
+logfile /var/log/redis/redis.log  # Log to a file for App Insights monitoring
